[gd_scene load_steps=6 format=3 uid="uid://ctbntrkfakm8r"]

[ext_resource type="Script" path="res://scripts/summary_panel.gd" id="1_kj0u4"]
[ext_resource type="FontFile" uid="uid://domy2bxambts" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="2_0iynp"]
[ext_resource type="FontFile" uid="uid://ch34o33lt8ea4" path="res://Assets/Fonts/PixelOperator8.ttf" id="3_xcelq"]
[ext_resource type="Theme" uid="uid://bn7tf70nor1sb" path="res://gui_menu_theme.tres" id="4_g60ud"]
[ext_resource type="Texture2D" uid="uid://de7ove72i6p40" path="res://Assets/gui/bomhead.png" id="5_suu2d"]

[node name="SummaryPanel" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kj0u4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9
offset_right = 0.00012207
grow_horizontal = 2
grow_vertical = 2
color = Color(0.165737, 0.350941, 0.200563, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 123.0
offset_right = 1509.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("2_0iynp")
theme_override_font_sizes/font_size = 128
text = "ROUND END"

[node name="ChildSurvivedTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 280.0
offset_right = 982.0
offset_bottom = 317.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "Babies grow up:"

[node name="ChildSurvivedValue" type="Label" parent="ChildSurvivedTitle"]
layout_mode = 0
offset_left = 459.0
offset_right = 950.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "0123456789"

[node name="ChildDieTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 340.0
offset_right = 982.0
offset_bottom = 377.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "Babies died:"

[node name="ChildDieValue" type="Label" parent="ChildDieTitle"]
layout_mode = 0
offset_left = 459.0
offset_right = 950.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "0123456789"

[node name="SatisfyCountTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 400.0
offset_right = 982.0
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "Satisfy times:"

[node name="SatisfyCountValue" type="Label" parent="SatisfyCountTitle"]
layout_mode = 0
offset_left = 459.0
offset_right = 950.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "0123456789"

[node name="SumPointsTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 500.0
offset_right = 985.0
offset_bottom = 537.0
theme_override_fonts/font = ExtResource("3_xcelq")
theme_override_font_sizes/font_size = 36
text = "TOTAL POINTS:"

[node name="SumPointsValue" type="Label" parent="SumPointsTitle"]
layout_mode = 0
offset_left = 459.0
offset_top = -22.0
offset_right = 1099.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("2_0iynp")
theme_override_font_sizes/font_size = 64
text = "0123456789"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 663.0
offset_top = 771.0
offset_right = 1266.0
offset_bottom = 919.0
theme = ExtResource("4_g60ud")
text = "EXIT TO MENU"

[node name="Star#1" type="TextureRect" parent="."]
self_modulate = Color(0.111197, 0.111197, 0.111197, 1)
layout_mode = 0
offset_left = 696.0
offset_top = 604.0
offset_right = 855.0
offset_bottom = 740.0
texture = ExtResource("5_suu2d")

[node name="Star#4" type="TextureRect" parent="Star#1"]
visible = false
layout_mode = 0
offset_right = 159.0
offset_bottom = 136.0
texture = ExtResource("5_suu2d")

[node name="Star#2" type="TextureRect" parent="."]
self_modulate = Color(0.111197, 0.111197, 0.111197, 1)
layout_mode = 0
offset_left = 1056.0
offset_top = 604.0
offset_right = 1215.0
offset_bottom = 740.0
texture = ExtResource("5_suu2d")

[node name="Star#5" type="TextureRect" parent="Star#2"]
visible = false
layout_mode = 0
offset_right = 159.0
offset_bottom = 136.0
texture = ExtResource("5_suu2d")

[node name="Star#3" type="TextureRect" parent="."]
self_modulate = Color(0.111197, 0.111197, 0.111197, 1)
layout_mode = 0
offset_left = 853.0
offset_top = 547.0
offset_right = 1012.0
offset_bottom = 683.0
scale = Vector2(1.3, 1.3)
texture = ExtResource("5_suu2d")

[node name="Star#6" type="TextureRect" parent="Star#3"]
visible = false
self_modulate = Color(0.941059, 0.874514, 0.330428, 1)
layout_mode = 0
offset_right = 159.0
offset_bottom = 136.0
texture = ExtResource("5_suu2d")

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
